#266 - Fixed z-index issue with document preview and uploader in message screen

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -868,6 +868,7 @@ input#send-to-input {
 	#messages-post-media-uploader.open {
 		position: absolute;
 		top: 0;
+		z-index: 112;
 		background: rgba(255, 255, 255, 0.99);
 		height: calc(100% - 245px);
 		width: 100%;
